# dispatcher-codex-handoff

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  dispatcher.example.toml  package.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  stale.yml
crates/dispatcher-cli/: Cargo.toml
crates/dispatcher-cli/src/: main.rs
crates/dispatcher-engine/: Cargo.toml
crates/dispatcher-engine/src/: analyzer.rs  circuit_breaker.rs  handoff_certification.rs  handoff_eval_fixtures.json  lib.rs  scorer.rs  selector.rs  types.rs
crates/dispatcher-providers/: Cargo.toml  provider-models.toml
crates/dispatcher-providers/src/: anthropic.rs  deepseek.rs  demo.rs  gemini.rs  http_client.rs  lib.rs  metadata.rs  mimo.rs  ollama.rs  openai.rs  openai_compat.rs  openrouter.rs  registry.rs  siliconflow.rs
crates/dispatcher-server/: Cargo.toml
crates/dispatcher-server/src/: handoff.rs  lib.rs  protocol.rs  telemetry.rs
crates/dispatcher-server/src/routes/: chat.rs  health.rs  messages.rs  mod.rs  models.rs  policy.rs  providers.rs  responses.rs  responses_compat.rs  telemetry_route.rs
docs/: mvp-user-manual-zh.md  routing-research-and-product-answer-zh.md
docs/dispatcher-2.0/: 00-pm-brief.md  01-codex-protocol-research.md  02-quota-detection-research.md  03-domestic-model-compatibility.md  04-handoff-schema.md  05-mvp-scope-and-plan.md  06-cross-check-report.md  07-multi-agent-pm-followup.md  08-super-mode-handoff-2026-06-18.md  09-project-strategy-and-roadmap-2026-06-18.md  PROJECT_MANUAL.md
docs/releases/: v0.1.0-alpha.1.md  v0.2.0-codex-handoff.md  v0.2.1-codex-handoff-followup.md  v0.3.0-fallback-worker-certification.md
docs/super-mode/: super-mode-project-methodology.html
docs/superpowers/plans/: 2026-06-16-codex-emergency-handoff.md  2026-06-17-dispatcher-2-followup-phases.md  2026-06-18-fallback-worker-certification.md
scripts/: check-open-source-readiness.sh
web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  index.html  main.tsx  types.ts
web/src/components/: CostOverviewPanel.tsx  Header.tsx  LanguageSwitcher.tsx  PolicyEditorDialog.tsx  PolicyPanel.tsx  ProviderCard.tsx  ProviderStatsTable.tsx  QuickTestPanel.tsx  SimpleDashboard.tsx  StatsPanel.tsx  StatusFooter.tsx  StrategySelector.tsx  theme-provider.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  popover.tsx  scroll-area.tsx  select.tsx  switch.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
web/src/hooks/: useChatCompletion.ts  useHandoffContinuation.ts  usePolicy.ts  usePrimaryReview.ts  useProviders.ts  useTelemetry.ts
web/src/i18n/: index.ts
web/src/i18n/locales/: en.json  zh.json
web/src/lib/api/: dashboard.ts
web/src/public/: design-preview.html
web/src/utils/: formatters.ts  routingExplanation.ts
