[workspace]
members = [
    "crates/dispatcher-engine",
    "crates/dispatcher-providers",
    "crates/dispatcher-server",
    "crates/dispatcher-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
bytes = "1"
http = "1"
url = "2"
dirs = "5"
toml = "1.1"
tokio-tungstenite = "0.21"
async-trait = "0.1"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = "symbols"
