[package]
name = "dispatcher-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI entry point for the Dispatcher Codex Handoff Router"

[[bin]]
name = "dispatch"
path = "src/main.rs"

[dependencies]
dispatcher-engine = { path = "../dispatcher-engine" }
dispatcher-providers = { path = "../dispatcher-providers" }
dispatcher-server = { path = "../dispatcher-server" }
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
dirs.workspace = true
