[package]
name = "dispatcher-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core LLM routing engine — Analyzer → Scorer → Selector pipeline"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
regex.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
async-trait.workspace = true
uuid.workspace = true
toml.workspace = true
