[package]
name = "dispatcher-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "LLM provider implementations — Anthropic, OpenAI, Gemini, OpenRouter, Ollama"

[dependencies]
dispatcher-engine = { path = "../dispatcher-engine" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
reqwest.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true
bytes.workspace = true
http.workspace = true
url.workspace = true
uuid.workspace = true
async-trait.workspace = true
