[package]
name = "dispatcher-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Axum HTTP server with OpenAI-compatible API and embedded web dashboard"

[dependencies]
dispatcher-engine = { path = "../dispatcher-engine" }
dispatcher-providers = { path = "../dispatcher-providers" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
futures.workspace = true
bytes.workspace = true
http.workspace = true
url.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true

[dev-dependencies]
async-trait.workspace = true
